# tp05

./: CMakeLists.txt  README.md
.github/: .coveralls.yml
.github/workflows/: Bank.yml  Coverage.yml
banking/: Account.cpp  Account.h  Transaction.cpp
tests/: test.cpp
